# connect-json-schema-gen

./: .gitignore  Makefile  README.md  convert.sh  main.py  pyproject.toml  requirements.txt
.connect/sinks/: rss_feed_sink.json  rss_feed_sink.yml
connect-json-schema-gen/: main.py  model.py
